@@ -20,14 +20,13 @@ along with QSpeedTest.  If not, see <http://www.gnu.org/licenses/>.
 
 
 #include <QtCore/QString>
-#include <QtCore/QMutex>
 #include "qspeedtest.h"
 
 
 const QString PROJECTNAME = "QSpeedTest";
 const QString PROGRAMNAME = "QSpeedTest";
 const QString PROGRAMAUTHOR = "parsifal";
-const QString PROGRAMVERSION = "r27";
+const QString PROGRAMVERSION = "r28";
 const QString PROGRAMURL = "https://sourceforge.net/projects/qspeedtest/files/";
 const QString PROGRAMDISCUSSURL = "https://sourceforge.net/apps/phpbb/qspeedtest";
 const QString PROGRAMUPDATECHECKURL = "http://qspeedtest.sourceforge.net/updates/qspeedtest.version";
